# Owl

./: .flake8  .gitignore  AUTHORS  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  INSTALL.md  Jupyter_tutorial.md  Makefile  PARAMETERS.md  RATE_MODELS.md  README.md  RELEASE_NOTES.md  USER_GUIDE.md  arp.py  case_john+sally.ipynb  case_kim+sam.ipynb  jack+jill.ipynb  jack+jill.xlsx  john+sally.ipynb  john+sally.xlsx  kim+sam.ipynb  lp.md  lp.tex  owl.py  owlconfig.yaml  owlplanner.cmd  owlplanner.sh  pyproject.toml  pytest.ini  rates.py  requirements.txt  tax2024.py  template.ipynb  template.xlsx  timelists.py  ttt  tutorial_1.ipynb  tutorial_2.ipynb  (+2 more)
.devcontainer/: devcontainer.json
.github/: RFC-docs-restructure-placeholder.md
.github/workflows/: github-actions-runtests.yml
.streamlit/: config.toml
assets/: LICENSE
docker/: Dockerfile  Dockerfile.bare  Dockerfile.build  Dockerfile.dev  Dockerfile.run  Dockerfile.static  Dockerfile.versioned  README.md  build.cmd  buildContainers.cmd  buildContainers.sh  buildPackage.cmd  buildPackage.sh  buildentrypoint.sh  docker-compose.yml  entrypoint.sh  fastentrypoint.sh  runentrypoint.sh
docs/: index.html  install-uv.html  installation.html  lp.tex  mcp.md  modeling-capabilities.md  owl.tex  plugable-example.md  plugable-rates.md  search.json  sor-bootstrap.md  sor-models.md  sor-toeplitz.md  users_guide.html  year-end-update.md
docs/examples/: example-1.html
examples/: Case_alex+jamie.toml  Case_bill.toml  Case_chris+pat.toml  Case_dana.toml  Case_devon.toml  Case_drawdowncalc-comparison-1.toml  Case_helen+ruth.toml  Case_jack+jill.toml  Case_joe.toml  Case_john+sally.toml  Case_jon+jane.toml  Case_jordan+taylor.toml  Case_kim+sam-bequest.toml  Case_kim+sam-spending.toml  Case_morgan.toml  Case_robin.toml  HFP_alex+jamie.xlsx  HFP_chris+pat.xlsx  HFP_dana.xlsx  HFP_devon.xlsx  HFP_helen+ruth.xlsx  HFP_jack+jill.xlsx  HFP_joe.xlsx  HFP_john+sally.xlsx  HFP_jon+jane.xlsx  HFP_jordan+taylor.xlsx  HFP_kim+sam.xlsx  HFP_morgan.xlsx  HFP_robin.xlsx  HFP_template.xlsx  Jan plan.ini  case_drawdown-comparison-1.toml  case_drawdown-equiv-nocapgains.toml  case_drawdowncalc-comparison-1.toml  case_jack+jill.toml  case_joe.toml  case_john+sally.ipynb  case_john+sally.toml  case_jon+jane.toml  case_kim+sam-bequest.toml  (+13 more)
info/: PARAMETERS.md  RATE_MODELS.md  USER_GUIDE.md  mcp.md  modeling-capabilities.md  year-end-update.md
interface/: Assets.py  Basic_Information.py  Introduction.py  Optimization_Parameters.py  Summary.py  key.py  main.py
notebooks/: case_john+sally.ipynb  case_kim+sam.ipynb  john+sally.ipynb  kim+sam.ipynb  stochastic_spending.ipynb  template.ipynb  tutorial_1.ipynb  tutorial_2.ipynb  tutorial_3.ipynb
owl/: __init__.py  abcapi.py  clone.py  config.py  plan.py  rates.py  tax2024.py  tax2025.py  timelists.py  utils.py
papers/: owl.tex
scripts/: add_other_inc_column.py
site-src/: README.md  _quarto.yml  index.qmd  install-uv.qmd  installation.qmd  plugable-example.qmd  plugable-rates.qmd  sor-bootstrap.qmd  sor-models.qmd  sor-toeplitz.qmd  users_guide.qmd
site-src/examples/: example-1.qmd  workbook_jack & jill - tutorial.xlsx
site-src/papers/: images  owl.tex
src/owlplanner/: __init__.py  abcapi.py  config.py  debts.py  export.py  fixedassets.py  hfp_io.py  logging.py  mylogging.py  pension.py  plan.py  plots.py  progress.py  rates.py  socialsecurity.py  spending.py  stresstests.py  tax2024.py  tax2025.py  tax2026.py  tax_federal.py  tax_state.py  timelists.py  utils.py  varmap.py  version.py
tests/: conftest.py  test_abcapi_coverage.py  test_aca.py  test_bill_swr.py  test_cashflow_analytics.py  test_cashflow_balance.py  test_cli_commands.py  test_config_coverage.py  test_config_pydantic.py  test_config_ui_bridge.py  test_cost_basis.py  test_debts.py  test_decomposition.py  test_export.py  test_fixedassets.py  test_hfp_io.py  test_hfp_io_coverage.py  test_historical.py  test_hsa.py  test_hybrid_objective.py  test_inflation_transform.py  test_irmaa.py  test_logger.py  test_ltcg.py  test_ltcg_lp.py  test_mc.py  test_mcp_params.py  test_mcp_stochastic.py  test_medicare.py  test_mortality_tables.py  test_mylogging_coverage.py  test_niit_milp.py  test_oscillation_damping.py  test_pension.py  test_plan_edge_cases.py  test_plan_metrics.py  test_rate_model_bootstrap_sor.py  test_rate_model_bootstrap_statistics.py  test_rate_model_discovery.py  test_rate_model_garch_dcc.py  (+33 more)
tests/assets/: test_cost_basis.py  test_debts.py  test_fixedassets.py  test_hsa.py  test_pension.py  test_spia.py
tests/cli/: test_cli_commands.py  test_logger.py  test_mylogging_coverage.py  test_set_override.py
tests/config/: test_config_coverage.py  test_config_pydantic.py  test_config_ui_bridge.py  test_hfp_io.py  test_hfp_io_coverage.py  test_roundtrip_generic.py  test_save_hfp.py
tests/export/: test_balance_sheets.py  test_export.py  test_summary.py
tests/mcp/: test_mcp_compare_baseline.py  test_mcp_explain.py  (+5 more)
ui/: About_Owl.py  Account_Balances.py  Asset_Allocation.py  Asset_Allocations.py  Assets.py  Assistant.py  Basic_Info.py  Basic_Information.py  Case_Results.py  Case_Setup.py  Case_Summary.py  Case_Worksheets.py  Connect_your_AI.py  Create_Case.py  Current_Assets.py  Documentation.py  Financial_Profile.py  Fixed_Income.py  Goals.py  Graphs.py  Historical_Range.py  Household_Financial_Profile.py  Illiquid_Assets.py  Introduction.py  Logs.py  Logs2.py  Monte_Carlo.py  Optimization_Parameters.py  Other_Assets.py  Output_Files.py  Parameters_Reference.py  Quick_Start.py  README.md  README.txt  Rate_Selection.py  Rates.py  Rates_Selection.py  Release_Notes.py  Reports.py  Run_Options.py  (+25 more)
(+137 files in other folders)
